Manage private/resource.cfg. FIXME: get the value from the nagios.cfg pillar and manage this file there (if applicable)

--- a/nagios/server/files/private/resource.cfg
+++ b/nagios/server/files/private/resource.cfg
@@ -1,3 +1,5 @@
+{%- set nagios = pillar.get('nagios', {}) -%}
+{%- set resource_cfg = nagios.get('resource_cfg', {'USER1': '/usr/lib64/nagios/plugins'} -%}
 ###########################################################################
 #
 # RESOURCE.CFG - Sample Resource File for Nagios 3.5.1
@@ -23,8 +25,11 @@
 ###########################################################################
 
 # Sets $USER1$ to be the path to the plugins
-$USER1$=/usr/lib64/nagios/plugins
-
+#$USER1$=/usr/lib64/nagios/plugins
+{%- for usernum,value in resource_cfg.items() -%}
+${{ usernum }}$={{ value }}
+{%- endfor %}
+``
 # Sets $USER2$ to be the path to event handlers
 #$USER2$=/usr/lib64/nagios/plugins/eventhandlers
 
