--- a/nagios/server/files/private/resource.cfg
+++ b/nagios/server/files/private/resource.cfg
@@ -1,5 +1,5 @@
 {%- set nagios = pillar.get('nagios', {}) -%}
-{%- set resource_cfg = nagios.get('resource_cfg', {'USER1': '/usr/lib64/nagios/plugins'} -%}
+{%- set resource_cfg = nagios.get('resource_cfg', {'USER1': '/usr/lib64/nagios/plugins'}) -%}
 ###########################################################################
 #
 # RESOURCE.CFG - Sample Resource File for Nagios 3.5.1
