--- a/nagios/server/files/private/resource.cfg
+++ b/nagios/server/files/private/resource.cfg
@@ -26,7 +26,7 @@
 
 # Sets $USER1$ to be the path to the plugins
 #$USER1$=/usr/lib64/nagios/plugins
-{%- for usernum,value in resource_cfg.items() -%}
+{%- for usernum,value in resource_cfg.items() %}
 ${{ usernum }}$={{ value }}
 {%- endfor %}
 
