more sleepy typos

--- a/nagios/nrpe/files/nrpe.cfg
+++ b/nagios/nrpe/files/nrpe.cfg
@@ -1,5 +1,5 @@
 {%- set nrpe = pillar.get('nrpe', {}) -%}
-{%- set config = nagios.get('config', {}) -%}
+{%- set config = nrpe.get('config', {}) -%}
 #############################################################################
 # Sample NRPE Config File 
 # Written by: Ethan Galstad (nagios@nagios.org)
