make sure that the trailing slash is on the include folder (might break nrpe without?).  Match defaults in any case

--- a/nagios/nrpe/files/nrpe.cfg
+++ b/nagios/nrpe/files/nrpe.cfg
@@ -283,6 +283,6 @@ command[{{ command_name }}]={{ command }}
 # This directive allows you to include definitions from config files (with a
 # .cfg extension) in one or more directories (with recursion).
 
-{% set include_dir = config.get('include_dir', '/etc/nrpe.d') -%}
+{% set include_dir = config.get('include_dir', '/etc/nrpe.d/') -%}
 include_dir={{ include_dir }}
 #include_dir=/etc/nrpe.d/
