fix timeperiod layout as it does not match expected syntax for awk script (spaces before the "split")

--- a/nagios/server/files/objects/timeperiods.yaml
+++ b/nagios/server/files/objects/timeperiods.yaml
@@ -25,12 +25,12 @@
       name: 'us-holidays'
       timeperiod_name: 'us-holidays'
       alias: 'U.S. Holidays'
-      january: '1 00:00-00:00 '
-      monday: '-1 may 00:00-00:00 '
-      july: '4 00:00-00:00 '
-      monday: '1 september 00:00-00:00 '
-      thursday: '4 november 00:00-00:00 '
-      december: '25 00:00-00:00 '
+      'january 1': '00:00-00:00'
+      'monday -1 may': '00:00-00:00'
+      'july 4': '00:00-00:00'
+      'monday 1 september': '00:00-00:00'
+      'thursday 4 november': '00:00-00:00'
+      'december 25': '00:00-00:00'
     24x7_sans_holidays:
       timeperiod_name: '24x7_sans_holidays'
       alias: '24x7 Sans Holidays'
