--- a/nagios/server/files/objects/default_autochecks.yaml
+++ b/nagios/server/files/objects/default_autochecks.yaml
@@ -1,38 +1,44 @@
 /etc/nagios/objects/default_autochecks.cfg:
   service:
-    check-load:
+    nrpe-check-load:
       use: 'generic-service'
       service_description: 'Current Load'
       check_command: 'check_nrpe!check_load'
-      name: 'check-load'
+      name: 'nrpe-check-load'
       register: '0'
-    check-users:
+    nrpe-check-users:
       use: 'generic-service'
       service_description: 'Current Users'
       check_command: 'check_nrpe!check_users'
-      name: 'check-users'
+      name: 'nrpe-check-users'
       register: '0'
-    check-totprocs:
+    nrpe-check-totprocs:
       use: 'generic-service'
       service_description: 'Total Processes'
       check_command: 'check_nrpe!check_total_procs'
-      name: 'check-totprocs'
+      name: 'nrpe-check-totprocs'
       register: '0'
-    check-zombie-procs:
+    nrpe-check-zombie-procs:
       use: 'generic-service'
       service_description: 'Zombie Processes'
       check_command: 'check_nrpe!check_zombie_procs'
-      name: 'check-zombie-procs'
+      name: 'nrpe-check-zombie-procs'
       register: '0'
-    check-all-disks:
+    nrpe-check-all-disks:
       use: 'generic-service'
       service_description: 'Free Disk Space'
       check_command: 'check_nrpe!check_all_disks'
-      name: 'check-all-disks'
+      name: 'nrpe-check-all-disks'
       register: '0'
-    check-swap:
+    nrpe-check-swap:
       use: 'generic-service'
       service_description: 'Swap Utilization'
       check_command: 'check_nrpe!check_swap'
-      name: 'check-swap'
+      name: 'nrpe-check-swap'
+      register: '0'
+    nrpe-check-salt-minion:
+      use: 'generic-service'
+      service_description: 'Swap Utilization'
+      check_command: 'check_nrpe!check_salt_minion'
+      name: 'nrpe-check-salt-minion'
       register: '0'
