--- a/pillar.example
+++ b/pillar.example
@@ -1,3 +1,6 @@
+mine_functions:
+  grains.items:
+
 nagios:
   config:
     high_service_flap_threshold: 22.0
@@ -6,10 +9,12 @@ nagios:
       - /etc/nagios/servers
   resource_cfg:
     USER1: /usr/lib64/nagios/plugins
-    USER2: /dev/null
+    USER2: /usr/lib/nagios/plugins
   passwd_cfg:
     nagiosadmin: RbdO4ou4PNyMg
   include_default_files: True
+  autogenerate_checks: True
+  use_default_autcheck_template: True
   included_config_files: []
   additional_configs:
     /tmp/test.cfg:
@@ -24,16 +29,18 @@ nagios:
 
 nrpe:
   config:
-    commands:
+    commands: 
       check_total_procs: '/usr/lib64/nagios/plugins/check_procs -w 150 -c 200'
       check_load: '/usr/lib64/nagios/plugins/check_load -w 15,10,5 -c 30,25,20'
       check_users: '/usr/lib64/nagios/plugins/check_users -w 5 -c 10'
       check_hda1: '/usr/lib64/nagios/plugins/check_disk -w 20% -c 10% -p /dev/hda1'
       check_zombie_procs: '/usr/lib64/nagios/plugins/check_procs -w 5 -c 10 -s Z'
       check_xvda1: '/usr/lib64/nagios/plugins/check_disk -w 20% -c 10% -p /dev/xvda1'
+    dont_blame_nrpe: 1
+  use_default_autcheck_template: True
   additional_configs:
     /etc/nrpe.d/test.cfg:
       options:
         dont_blame_nrpe: 1
       commands:
-        check_disks: '/usr/lib64/nagios/plugins/check_disk -w $ARG1$ -c $ARG2$ -A -X tmpfs -X devtmpfs'
+        custom_check_disks: '/usr/lib64/nagios/plugins/check_disk -w $ARG1$ -c $ARG2$ -A -X tmpfs -X devtmpfs'
