attempt to bring order to defines

--- a/nagios/server/files/objects/contacts.yaml
+++ b/nagios/server/files/objects/contacts.yaml
@@ -1,12 +1,12 @@
 /etc/nagios/objects/contacts.cfg:
   contact:
     nagiosadmin:
-      contact_name: 'nagiosadmin '
-      use: 'generic-contact '
-      alias: 'Nagios Admin '
-      email: 'nagios@localhost '
+      - contact_name: 'nagiosadmin '
+      - use: 'generic-contact '
+      - alias: 'Nagios Admin '
+      - email: 'nagios@localhost '
   contactgroup:
     admins:
-      contactgroup_name: 'admins'
-      alias: 'Nagios Administrators'
-      members: 'nagiosadmin'
+      - contactgroup_name: 'admins'
+      - alias: 'Nagios Administrators'
+      - members: 'nagiosadmin'
