--- a/nagios/server/files/objects/switch.yaml
+++ b/nagios/server/files/objects/switch.yaml
@@ -1,35 +1,35 @@
 /etc/nagios/objects/switch.cfg:
   host:
     linksys-srw224p:
-      use: 'generic-switch '
-      host_name: 'linksys-srw224p '
-      alias: 'Linksys SRW224P Switch '
-      address: '192.168.1.253 '
-      hostgroups: 'switches '
+      - use: 'generic-switch '
+      - host_name: 'linksys-srw224p '
+      - alias: 'Linksys SRW224P Switch '
+      - address: '192.168.1.253 '
+      - hostgroups: 'switches '
   hostgroup:
     switches:
-      hostgroup_name: 'switches '
-      alias: 'Network Switches '
+      - hostgroup_name: 'switches '
+      - alias: 'Network Switches '
   service:
     PING:
-      use: 'generic-service '
-      host_name: 'linksys-srw224p '
-      service_description: 'PING '
-      check_command: 'check_ping!200.0,20%!600.0,60% '
-      normal_check_interval: '5 '
-      retry_check_interval: '1 '
+      - use: 'generic-service '
+      - host_name: 'linksys-srw224p '
+      - service_description: 'PING '
+      - check_command: 'check_ping!200.0,20%!600.0,60% '
+      - normal_check_interval: '5 '
+      - retry_check_interval: '1 '
     Uptime:
-      use: 'generic-service '
-      host_name: 'linksys-srw224p'
-      service_description: 'Uptime'
-      check_command: 'check_snmp!-C public -o sysUpTime.0'
+      - use: 'generic-service '
+      - host_name: 'linksys-srw224p'
+      - service_description: 'Uptime'
+      - check_command: 'check_snmp!-C public -o sysUpTime.0'
     Port1LinkStatus:
-      use: 'generic-service '
-      host_name: 'linksys-srw224p'
-      service_description: 'Port 1 Link Status'
-      check_command: 'check_snmp!-C public -o ifOperStatus.1 -r 1 -m RFC1213-MIB'
+      - use: 'generic-service '
+      - host_name: 'linksys-srw224p'
+      - service_description: 'Port 1 Link Status'
+      - check_command: 'check_snmp!-C public -o ifOperStatus.1 -r 1 -m RFC1213-MIB'
     Port1BandwidthUsage:
-      use: 'generic-service '
-      host_name: 'linksys-srw224p'
-      service_description: 'Port 1 Bandwidth Usage'
-      check_command: 'check_local_mrtgtraf!/var/lib/mrtg/192.168.1.253_1.log!AVG!1000000,1000000!5000000,5000000!10'
+      - use: 'generic-service '
+      - host_name: 'linksys-srw224p'
+      - service_description: 'Port 1 Bandwidth Usage'
+      - check_command: 'check_local_mrtgtraf!/var/lib/mrtg/192.168.1.253_1.log!AVG!1000000,1000000!5000000,5000000!10'
