--- a/nagios/server/files/objects/localhost.yaml
+++ b/nagios/server/files/objects/localhost.yaml
@@ -1,55 +1,55 @@
 /etc/nagios/objects/localhost.cfg:
   host:
     localhost:
-      use: 'linux-server '
-      host_name: 'localhost'
-      alias: 'localhost'
-      address: '127.0.0.1'
+      - use: 'linux-server '
+      - host_name: 'localhost'
+      - alias: 'localhost'
+      - address: '127.0.0.1'
   hostgroup:
     linux-servers:
-      hostgroup_name: 'linux-servers '
-      alias: 'Linux Servers '
-      members: 'localhost '
+      - hostgroup_name: 'linux-servers '
+      - alias: 'Linux Servers '
+      - members: 'localhost '
   service:
     PING:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'PING'
-      check_command: 'check_ping!100.0,20%!500.0,60%'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'PING'
+      - check_command: 'check_ping!100.0,20%!500.0,60%'
     RootPartition:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'Root Partition'
-      check_command: 'check_local_disk!20%!10%!/'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'Root Partition'
+      - check_command: 'check_local_disk!20%!10%!/'
     CurrentUsers:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'Current Users'
-      check_command: 'check_local_users!20!50'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'Current Users'
+      - check_command: 'check_local_users!20!50'
     TotalProcesses:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'Total Processes'
-      check_command: 'check_local_procs!250!400!RSZDT'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'Total Processes'
+      - check_command: 'check_local_procs!250!400!RSZDT'
     CurrentLoad:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'Current Load'
-      check_command: 'check_local_load!5.0,4.0,3.0!10.0,6.0,4.0'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'Current Load'
+      - check_command: 'check_local_load!5.0,4.0,3.0!10.0,6.0,4.0'
     SwapUsage:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'Swap Usage'
-      check_command: 'check_local_swap!20!10'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'Swap Usage'
+      - check_command: 'check_local_swap!20!10'
     SSH:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'SSH'
-      check_command: 'check_ssh'
-      notifications_enabled: '0'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'SSH'
+      - check_command: 'check_ssh'
+      - notifications_enabled: '0'
     HTTP:
-      use: 'local-service '
-      host_name: 'localhost'
-      service_description: 'HTTP'
-      check_command: 'check_http'
-      notifications_enabled: '0'
+      - use: 'local-service '
+      - host_name: 'localhost'
+      - service_description: 'HTTP'
+      - check_command: 'check_http'
+      - notifications_enabled: '0'
