--- a/nagios/server/files/objects/timeperiods.yaml
+++ b/nagios/server/files/objects/timeperiods.yaml
@@ -1,44 +1,44 @@
 /etc/nagios/objects/timeperiods.cfg:
   timeperiod:
     24x7:
-      timeperiod_name: '24x7'
-      alias: '24 Hours A Day, 7 Days A Week'
-      sunday: '00:00-24:00'
-      monday: '00:00-24:00'
-      tuesday: '00:00-24:00'
-      wednesday: '00:00-24:00'
-      thursday: '00:00-24:00'
-      friday: '00:00-24:00'
-      saturday: '00:00-24:00'
+      - timeperiod_name: '24x7'
+      - alias: '24 Hours A Day, 7 Days A Week'
+      - sunday: '00:00-24:00'
+      - monday: '00:00-24:00'
+      - tuesday: '00:00-24:00'
+      - wednesday: '00:00-24:00'
+      - thursday: '00:00-24:00'
+      - friday: '00:00-24:00'
+      - saturday: '00:00-24:00'
     workhours:
-      timeperiod_name: 'workhours'
-      alias: 'Normal Work Hours'
-      monday: '09:00-17:00'
-      tuesday: '09:00-17:00'
-      wednesday: '09:00-17:00'
-      thursday: '09:00-17:00'
-      friday: '09:00-17:00'
+      - timeperiod_name: 'workhours'
+      - alias: 'Normal Work Hours'
+      - monday: '09:00-17:00'
+      - tuesday: '09:00-17:00'
+      - wednesday: '09:00-17:00'
+      - thursday: '09:00-17:00'
+      - friday: '09:00-17:00'
     none:
-      timeperiod_name: 'none'
-      alias: 'No Time Is A Good Time'
+      - timeperiod_name: 'none'
+      - alias: 'No Time Is A Good Time'
     us-holidays:
-      name: 'us-holidays'
-      timeperiod_name: 'us-holidays'
-      alias: 'U.S. Holidays'
-      'january 1': '00:00-00:00'
-      'monday -1 may': '00:00-00:00'
-      'july 4': '00:00-00:00'
-      'monday 1 september': '00:00-00:00'
-      'thursday 4 november': '00:00-00:00'
-      'december 25': '00:00-00:00'
+      - name: 'us-holidays'
+      - timeperiod_name: 'us-holidays'
+      - alias: 'U.S. Holidays'
+      - 'january 1': '00:00-00:00'
+      - 'monday -1 may': '00:00-00:00'
+      - 'july 4': '00:00-00:00'
+      - 'monday 1 september': '00:00-00:00'
+      - 'thursday 4 november': '00:00-00:00'
+      - 'december 25': '00:00-00:00'
     24x7_sans_holidays:
-      timeperiod_name: '24x7_sans_holidays'
-      alias: '24x7 Sans Holidays'
-      use: 'us-holidays '
-      sunday: '00:00-24:00'
-      monday: '00:00-24:00'
-      tuesday: '00:00-24:00'
-      wednesday: '00:00-24:00'
-      thursday: '00:00-24:00'
-      friday: '00:00-24:00'
-      saturday: '00:00-24:00'
+      - timeperiod_name: '24x7_sans_holidays'
+      - alias: '24x7 Sans Holidays'
+      - use: 'us-holidays '
+      - sunday: '00:00-24:00'
+      - monday: '00:00-24:00'
+      - tuesday: '00:00-24:00'
+      - wednesday: '00:00-24:00'
+      - thursday: '00:00-24:00'
+      - friday: '00:00-24:00'
+      - saturday: '00:00-24:00'
