--- a/nagios/server/files/objects/windows.yaml
+++ b/nagios/server/files/objects/windows.yaml
@@ -1,47 +1,47 @@
 /etc/nagios/objects/windows.cfg:
   host:
     winserver:
-      use: 'windows-server '
-      host_name: 'winserver '
-      alias: 'My Windows Server '
-      address: '192.168.1.2 '
+      - use: 'windows-server '
+      - host_name: 'winserver '
+      - alias: 'My Windows Server '
+      - address: '192.168.1.2 '
   hostgroup:
     windows-servers:
-      hostgroup_name: 'windows-servers '
-      alias: 'Windows Servers '
+      - hostgroup_name: 'windows-servers '
+      - alias: 'Windows Servers '
   service:
     NSClient++Version:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'NSClient++ Version'
-      check_command: 'check_nt!CLIENTVERSION'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'NSClient++ Version'
+      - check_command: 'check_nt!CLIENTVERSION'
     Uptime:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'Uptime'
-      check_command: 'check_nt!UPTIME'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'Uptime'
+      - check_command: 'check_nt!UPTIME'
     CPULoad:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'CPU Load'
-      check_command: 'check_nt!CPULOAD!-l 5,80,90'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'CPU Load'
+      - check_command: 'check_nt!CPULOAD!-l 5,80,90'
     MemoryUsage:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'Memory Usage'
-      check_command: 'check_nt!MEMUSE!-w 80 -c 90'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'Memory Usage'
+      - check_command: 'check_nt!MEMUSE!-w 80 -c 90'
     C:\DriveSpace:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'C:\ Drive Space'
-      check_command: 'check_nt!USEDDISKSPACE!-l c -w 80 -c 90'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'C:\ Drive Space'
+      - check_command: 'check_nt!USEDDISKSPACE!-l c -w 80 -c 90'
     W3SVC:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'W3SVC'
-      check_command: 'check_nt!SERVICESTATE!-d SHOWALL -l W3SVC'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'W3SVC'
+      - check_command: 'check_nt!SERVICESTATE!-d SHOWALL -l W3SVC'
     Explorer:
-      use: 'generic-service'
-      host_name: 'winserver'
-      service_description: 'Explorer'
-      check_command: 'check_nt!PROCSTATE!-d SHOWALL -l Explorer.exe'
+      - use: 'generic-service'
+      - host_name: 'winserver'
+      - service_description: 'Explorer'
+      - check_command: 'check_nt!PROCSTATE!-d SHOWALL -l Explorer.exe'
