Update documentation to reflect schema change

--- a/pillar.example
+++ b/pillar.example
@@ -20,12 +20,12 @@ nagios:
     /tmp/test.cfg:
       service:
         foo_service:
-          foo_setting: foo_value
-          foo_setting2: another_foo_value
+          - foo_setting: foo_value
+          - foo_setting2: another_foo_value
       host:
         foo_host:
-          foo_setting: foo_value
-          foo_setting2: another_foo_value 
+          - foo_setting: foo_value
+          - foo_setting2: another_foo_value 
 
 nrpe:
   config:
