--- a/nagios/server/files/cgi.cfg
+++ b/nagios/server/files/cgi.cfg
@@ -211,7 +211,7 @@ authorized_for_all_host_commands={{ authorized_for_all_host_commands }}
 
 #authorized_for_read_only=user1,user2
 {% set authorized_for_read_only = config.get('authorized_for_read_only', '') -%}
-{% if authorized_for_read_only != '') -%}
+{% if authorized_for_read_only != '' -%}
 authorized_for_read_only={{ authorized_for_read_only }}
 {% endif %}
 
@@ -230,7 +230,7 @@ authorized_for_read_only={{ authorized_for_read_only }}
 
 #statusmap_background_image=smbackground.gd2
 {% set statusmap_background_image = config.get('statusmap_background_image', '') -%}
-{% if statusmap_background_image != '') -%}
+{% if statusmap_background_image != '' -%}
 statusmap_background_image={{ statusmap_background_image }}
 {% endif %}
 
@@ -244,17 +244,17 @@ statusmap_background_image={{ statusmap_background_image }}
 
 #color_transparency_index_r=255
 {% set color_transparency_r = config.get('color_transparency_r', '') -%}
-{% if color_transparency_r != '') -%}
+{% if color_transparency_r != '' -%}
 color_transparency_r={{ color_transparency_r }}
 {% endif %}
 #color_transparency_index_g=255
 {% set color_transparency_g = config.get('color_transparency_g', '') -%}
-{% if color_transparency_g != '') -%}
+{% if color_transparency_g != '' -%}
 color_transparency_g={{ color_transparency_g }}
 {% endif %}
 #color_transparency_index_b=255
 {% set color_transparency_b = config.get('color_transparency_b', '') -%}
-{% if color_transparency_b != '') -%}
+{% if color_transparency_b != '' -%}
 color_transparency_b={{ color_transparency_b }}
 {% endif %}
 
@@ -302,7 +302,7 @@ default_statuswrl_layout={{ default_statuswrl_layout }}
 
 #statuswrl_include=myworld.wrl
 {% set statuswrl_include = config.get('statuswrl_include', '') -%}
-{% if statuswrl_include != '') -%}
+{% if statuswrl_include != '' -%}
 statuswrl_include={{ statuswrl_include }}
 {% endif %}
 
@@ -375,32 +375,32 @@ escape_html_tags={{ escape_html_tags }}
 
 #host_unreachable_sound=hostdown.wav
 {% set host_unreachable_sound = config.get('host_unreachable_sound', '') -%}
-{% if host_unreachable_sound != '') -%}
+{% if host_unreachable_sound != '' -%}
 host_unreachable_sound={{ host_unreachable_sound }}
 {% endif %}
 #host_down_sound=hostdown.wav
 {% set host_down_sound = config.get('host_down_sound', '') -%}
-{% if host_down_sound != '') -%}
+{% if host_down_sound != '' -%}
 host_down_sound={{ host_down_sound }}
 {% endif %}
 #service_critical_sound=critical.wav
 {% set service_critical_sound = config.get('service_critical_sound', '') -%}
-{% if service_critical_sound != '') -%}
+{% if service_critical_sound != '' -%}
 service_critical_sound={{ service_critical_sound }}
 {% endif %}
 #service_warning_sound=warning.wav
 {% set service_warning_sound = config.get('service_warning_sound', '') -%}
-{% if service_warning_sound != '') -%}
+{% if service_warning_sound != '' -%}
 service_warning_sound={{ service_warning_sound }}
 {% endif %}
 #service_unknown_sound=warning.wav
 {% set service_unknown_sound = config.get('service_unknown_sound', '') -%}
-{% if service_unknown_sound != '') -%}
+{% if service_unknown_sound != '' -%}
 service_unknown_sound={{ service_unknown_sound }}
 {% endif %}
 #normal_sound=noproblem.wav
 {% set normal_sound = config.get('normal_sound', '') -%}
-{% if normal_sound != '') -%}
+{% if normal_sound != '' -%}
 normal_sound={{ normal_sound }}
 {% endif %}
 
@@ -448,7 +448,7 @@ lock_author_names={{ lock_author_names }}
 
 #enable_splunk_integration=1
 {% set enable_splunk_integration = config.get('enable_splunk_integration', '') -%}
-{% if enable_splunk_integration != '') -%}
+{% if enable_splunk_integration != '' -%}
 enable_splunk_integration={{ enable_splunk_integration }}
 {% endif %}
 
@@ -456,7 +456,7 @@ enable_splunk_integration={{ enable_splunk_integration }}
 
 #splunk_url=http://127.0.0.1:8000/
 {% set splunk_url = config.get('splunk_url', '') -%}
-{% if splunk_url != '') -%}
+{% if splunk_url != '' -%}
 splunk_url={{ splunk_url }}
 {% endif %}
 
