update pillar example

--- a/pillar.example
+++ b/pillar.example
@@ -12,6 +12,8 @@ nagios:
     USER2: /usr/lib/nagios/plugins
   passwd_cfg:
     nagiosadmin: RbdO4ou4PNyMg
+  cgi_cfg:
+    physical_html_path: /usr/share/nagios/html
   include_default_files: True
   autogenerate_checks: True
   use_default_autcheck_template: True
